# the-great-combinator

./: .gitignore  README.md  flake.nix  the-great-combinator.code-workspace  the-great-combinator.sln
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: main.rs
core/tests/: cli_smoke.rs
scripts/: build-all.sh  package-vscode.sh  run-cli-demo.sh
vs-ext/: VSIXManifest.json  the-great-combinator.vsix.csproj
vs-ext/src/: Package.cs  TgcCopyCommand.cs  TgcTempCommand.cs
vscode-ext/: .vscodeignore  package.json  tsconfig.json
vscode-ext/src/: extension.ts
